Removed NavBar sticky position to avoid dropdown being covered by Alerts

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,8 +1,3 @@
 .highlighted {
     border-bottom: 3px solid rgb(174, 185, 28) !important;
 }
-
-.nav-bar {
-    position: sticky;
-    top: 0;
-}
